@@ -30,6 +30,7 @@
 using System;
 using System.IO;
 using System.Collections;
+using System.Collections.Specialized;
 using Mono.Addins.Serialization;
 
 namespace Mono.Addins.Database
@@ -236,9 +237,17 @@ namespace Mono.Addins.Database
 		public bool IsRoot;
 		public bool ScanError;
 		public string Domain;
+		public StringCollection IgnorePaths;
 		
 		public bool IsAddin {
 			get { return AddinId != null && AddinId.Length != 0; }
+		}
+		
+		public void AddPathToIgnore (string path)
+		{
+			if (IgnorePaths == null)
+				IgnorePaths = new StringCollection ();
+			IgnorePaths.Add (path);
 		}
 		
 		void IBinaryXmlElement.Write (BinaryXmlWriter writer)
@@ -249,6 +258,8 @@ namespace Mono.Addins.Database
 			writer.WriteValue ("IsRoot", IsRoot);
 			writer.WriteValue ("ScanError", ScanError);
 			writer.WriteValue ("Domain", Domain);
+			if (IgnorePaths != null && IgnorePaths.Count > 0)
+				writer.WriteValue ("IgnorePaths", IgnorePaths);
 		}
 		
 		void IBinaryXmlElement.Read (BinaryXmlReader reader)
@@ -259,6 +270,7 @@ namespace Mono.Addins.Database
 			IsRoot = reader.ReadBooleanValue ("IsRoot");
 			ScanError = reader.ReadBooleanValue ("ScanError");
 			Domain = reader.ReadStringValue ("Domain");
+			IgnorePaths = (StringCollection) reader.ReadValue ("IgnorePaths", new StringCollection ());
 		}
 	}
 }
